--- a/backend/files/css/styles.css
+++ b/backend/files/css/styles.css
@@ -8,6 +8,7 @@
 
 a{
     font-size: 16px;
+    cursor: pointer;
 }
 p{
     font-size: 18px;
@@ -32,7 +33,7 @@ textarea{
     display: flex;
     width: 100%;
     justify-content:left;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color:   rgb(248, 230, 202);
     position: absolute;
     top: 0;
 }
@@ -53,7 +54,7 @@ textarea{
 }
 
 .navbar ul li a:hover{
-    background-color:rgb(24, 66, 165);
+    background-color:rgb(243, 219, 171);
     transition: 0.2s;
 }
 
@@ -89,7 +90,7 @@ textarea{
 .content{
     display:flex;
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     align-items: center;
     background-color: rgb(241, 238, 238);
@@ -145,9 +146,9 @@ textarea{
     padding: 8px;
     border: solid 2px black;
     border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    line-height: 17.5px;
+    width: 40px;
+    height: 40px;
+    line-height: 20px;
     margin: 10px 0;
     text-decoration: none;
     font-weight: 900;
@@ -165,7 +166,8 @@ textarea{
     border-radius: 50%;
     width: 0%;
     height: 100%;
-    background-color:rgb(52, 116, 138);
+    background-color:rgb(49, 139, 187);
+    /* background-color:rgb(161, 161, 251);  */
     /* 10% color */
     z-index: -1;
 }
@@ -180,6 +182,8 @@ textarea{
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .translate-main-box textarea{
@@ -218,6 +222,15 @@ textarea{
     height:10%;
     width:100%;
 }
+.translate-heading p{
+    display: flex;
+    align-items: center;
+    position: relative;
+    top:0;
+    height:10%;
+    width:100%;
+    padding-bottom: 0;
+}
 .translate-heading-side{
     width: 50%;
     height:100%;
@@ -226,9 +239,12 @@ textarea{
 }
 .translate-heading-side div{
     align-self: center;
-    margin-left: 30px;
     display: flex;
     align-items: center;
+}
+
+#translate-heading-side-margin{
+    margin-left: 30px;
 }
 
 /* come back to it: have to align */
@@ -238,12 +254,75 @@ textarea{
     align-self:center;
     justify-self: center;
 }
-.translate-heading-side div p:hover{
+.translate-heading-side div:hover #braille-selected{
     color:rgb(82, 82, 218); 
     /*10% color */
 }
-.translate-heading-side div p:hover #downarrow-fill{
+.translate-heading-side div:hover #downarrow-fill{
     fill:rgb(82, 82, 218); 
+}
+
+#braille-option:hover{
+    cursor: pointer;
+}
+#braille-selected:hover{
+    cursor: pointer;
+}
+.loader{
+    /* visibility: hidden; */
+    position: absolute;
+    width:100%;
+    height:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* 15% color */
+}
+.loader::after{
+    content: '';
+    width:75px;
+    height:75px;
+    border: solid 15px rgb(137, 137, 137);
+    border-top-color: white;
+    border-radius: 50%;
+    animation: loading 0.75s ease-in-out infinite;
+    /* 15% color */
+}
+@keyframes loading{
+    from {
+        transform: rotate(0turn);
+    }
+    to{
+        transform: rotate(1turn);
+    }
+}
+#language-dropdown{
+    visibility: hidden;
+    position:absolute;
+    top: 100%;
+    left: 0;
+    width:200px;
+    height:40px;
+    background-color: white;
+    z-index: 1;
+    border-radius: 1%;
+    margin-left:10px;
+}
+#language-dropdown div{
+    position: relative;
+    left:0;
+    border: solid 0.5px black;
+    width:200px;
+    height:40px;
+    border-radius: 1%;
+    justify-content:baseline;
+}
+
+#language-dropdown p{
+    box-sizing: border-box;
+    padding: 10px;
+    position: relative;
+    margin-left:20px;
 }
 
 .header{
