--- a/backend/files/css/styles.css
+++ b/backend/files/css/styles.css
@@ -3,20 +3,26 @@
     margin:0;
     padding:0;
     font-family:'Space Grotesk', sans-serif;
+    overflow-x:hidden;
 }
 a{
     font-size: 16px;
     cursor: pointer;
 }
-p{
+p, textarea{
     font-size: 18px;
     font-family:'Open Sans', sans-serif;
 }
 textarea{
+    padding: 10px;
     resize: none;
+    font-size: 16px;
+}
+input[type=text]{
+    padding: 0 10px;
+    font-size: 16px;
 }
 
-/* background for about page */
 .banner{
     position:absolute;
     top: 0;
@@ -94,16 +100,20 @@ textarea{
     width: 100vw;
     height: 100vh;
     align-items: center;
-    background-color: rgb(241, 238, 238);
 }
-
+.body-content{
+    width: 1000px;
+}
 .body-content h1{
     font-size: 55px;
     text-align: center;
     margin-bottom: 5%;
 }
-.body-content{
-    width: 1000px;
+#home{
+    background-color: rgb(241, 238, 238);
+}
+#about{
+    height: 200vh;
 }
 .translate{
     font-size: 16px;
@@ -120,6 +130,7 @@ textarea{
 }
 
 .translate-main{
+    box-sizing: border-box;
     width: 100%;
     height: 500px;
     display: flex;
@@ -188,7 +199,6 @@ textarea{
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    padding: 10px;
     background-color:lightblue;
 }
 
@@ -235,6 +245,7 @@ textarea{
     height:100%;
     position: relative;
     display: flex;
+    overflow-y: hidden;
 }
 .translate-heading-side div{
     align-self: center;
@@ -447,7 +458,7 @@ textarea{
 }
 
 #fname input[type=text]{
-    width:100%;
+    width: 90%;
     height: 20px;
 }
 
@@ -455,11 +466,11 @@ textarea{
     display:inline-block;
     width:40%;
     margin-left: 5%;
-    height: 40px;
+    height: auto;
 }
 
 #lname input[type=text]{
-    width:100%;
+    width:90%;
     height: 20px;
 }
 
@@ -528,6 +539,24 @@ textarea{
 #top-margin{
     margin-top: 150px
 }
+#info-para{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    border-radius: 1vw;
+    background-color:rgba(252, 253, 253, 0.7);
+    height: auto;
+    padding: 3%;
+
+}
+#info-para div{
+    width: 80%;
+}
+#info-para div p{
+    margin-bottom: 10px;
+}
 @media (max-width: 1280px) {
     .body-content {
         width:70%;
@@ -547,9 +576,15 @@ textarea{
     .form textarea{
         height: 120px;
     }
+    #fname input[type=text], #lname input[type=text]{
+        width:85%;
+    }
     p, a{
         font-size: 16px;
     }
+    textarea, input[type=text]{
+        font-size: 14px;
+    } 
     .content h1{
         font-size: 36px;
     }
@@ -594,6 +629,9 @@ textarea{
     p, a{
         font-size: 16px;
     }
+    textarea, input[type=text]{
+        font-size: 14px;
+    } 
     .content h1{
         font-size: 36px;
     }
@@ -611,10 +649,13 @@ textarea{
         height: 30vh;
     }
     #email input[type=text], #feedback textarea{
-        width:100%;
+        width:90%;
     }
     #fname, #lname{
         width: 45%;
+    }
+    #fname input[type=text], #lname input[type=text]{
+        width:80%;
     }
     #top-margin{
         margin-top: 100px;
@@ -636,6 +677,9 @@ textarea{
     p, a, .navbar ul li a{
         font-size: 14px;
     }
+    textarea, input[type=text]{
+        font-size: 14px;
+    } 
     .navbar{
         justify-content:center;
     }
@@ -646,7 +690,7 @@ textarea{
         padding: 18px 10px;
     }
     #email input[type=text], #feedback textarea{
-        width:100%;
+        width:80%;
     }
     #fname, #lname{
         width: 45%;
@@ -664,6 +708,9 @@ textarea{
     p, a, .navbar ul li a{
         font-size: 14px;
     }
+    textarea, input[type=text]{
+        font-size: 14px;
+    } 
     .content h1{
         font-size: 28px;
     }
@@ -675,6 +722,9 @@ textarea{
     }
     .navbar ul li a{
         padding: 20px 10px;
+    }
+    #email input[type=text], #feedback textarea{
+        width:90%;
     }
     #feedback textarea{
         height: 20vh;
